--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,3 +1,5 @@
+@import "styles.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -42,39 +44,81 @@ body {
   color: aliceblue;
 }
 
-.entire .input-container {
+
+.material-input-container {
   width: 100%;
   height: 40px;
-  display: flex;
   margin: 30px 0;
   position: relative;
-
 }
 
-.input-container input {
-  width: 100%;
-  height: 100%;
+.material-input {
   background: transparent;
+  height: 3em;
   outline: none;
   border: none;
   border-radius: 30px;
   border: 2px solid rgba(255, 255, 255, .2);
   color: #fff;
-  padding: 20px 45px 20px 20px;
-  font-size: 15px;
+  padding: 0.5em 1em;
+  width: 100%;
 }
 
-.input-container input::placeholder {
-  color: #fff;
+.material-input:focus {
+  border: 2px solid var(--light-green)
 }
 
-.input-container i {
+.material-label {
+  font-size: 14px;
+  transition: all 0.1s ease-in-out;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 1em;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+}
+
+
+.material-input:focus+.material-label {
+  color: var(--light-green);
+}
+
+.material-input:focus+.material-label,
+.material-input:not(:placeholder-shown)+.material-label {
+  height: 1em;
+  font-size: 12px;
+  transform: translate(0, -50%);
+  padding-left: 4px;
+  padding-right: 4px;
+  backdrop-filter: blur(6px);
+}
+
+.material-toggle {
   position: absolute;
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 20px;
+  opacity: 0.8;
+  cursor: pointer;
+  transition: opacity 0.1s ease-in-out;
 }
+
+.material-toggle:hover {
+  opacity: 1;
+}
+
+.material-toggle--active {
+  opacity: 0.4;
+}
+
+.material-toggle--active:hover {
+  opacity: 0.6;
+}
+
+
 
 .entire .remember-me {
   display: flex;
