--- a/www/css/login.css
+++ b/www/css/login.css
@@ -28,13 +28,14 @@ body {
 
 .entire {
   width: 420px;
-  background: #54652e28;
-  color: #fff;
+  background: rgba(var(--dark-gray-rgb), 0.5);
+  color: var(--white);
   border-radius: 10px;
   padding: 30px 40px;
   border: #333 solid 1px;
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
   position: relative;
+  backdrop-filter: blur(24px);
 }
 
 .entire h1 {
@@ -71,13 +72,9 @@ body {
 .entire .button {
   width: 100%;
   height: 45px;
-  background: #fff;
   border-radius: 40px;
-  border: none;
-  outline: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
   font-size: 18px;
-  color: #333;
   font-weight: 600;
 }
 
